# Davomat_App

./: build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  private_key.pepk  proguard-rules.pro
app/release/: app-release.apk  output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/key/: keyPath.jks  private_key.pepk
app/src/main/res/drawable/: about_svgrepo_com.xml  avatar_svgrepo_com.xml  avatar_svgrepo_com__1_.xml  background.xml  button_background.xml  camera_minimalistic_svgrepo_com.xml  college_education_graduate_svgrepo_com.xml  davomat.xml  delete.xml  dialog_background.xml  exit_icon.xml  home_1_svgrepo_com.xml  ic_attendance.xml  ic_back.xml  ic_course.xml  ic_error.xml  ic_group.xml  ic_info.xml  ic_leave.xml  ic_profile.xml  ic_student.xml  ic_verified.xml  ic_xlsx.xml  item_back.xml  item_fab.xml  item_for_davomat_app.xml  item_student_button.xml  kurs.xml  login_background.xml  login_register_background.xml  no_internet.xml  online_education_elearning_training_video_course_laptop_svgrepo_com.xml  ozgartirish.xml  person_add_svgrepo_com.xml  qoshish.xml  set_picture_galery_svgrepo_com.xml  student_svgrepo_com.xml  students.xml  user_svgrepo_com.xml  ustoz.xml  (+1 more)
app/src/main/res/layout/: activity_login.xml  activity_main.xml  activity_register.xml  dialog.xml  error_dialog.xml  fragment__course.xml  fragment_add_course.xml  fragment_attendance.xml  (+31 more)
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
mylibrary/: build.gradle.kts
(+379 files in other folders)
